@startuml
class "ProtocolError" as C_0012766499065510760009
class C_0012766499065510760009 {
__
}
class "ProtocolManager" as C_0016429213831703395188
class C_0016429213831703395188 {
-ProtocolManager() : void
-ProtocolManager(const ProtocolManager & p) = deleted : void
..
-operator=(const ProtocolManager & p) = deleted : ProtocolManager &
..
{static} +deserialize(const QByteArray & data) : QJsonObject
{static} +serialize(MessageType t, const QStringList & argv) : QByteArray
__
}
enum "ProtocolManager::MessageType" as C_0008849749518693832582
enum C_0008849749518693832582 {
START
LoginRequest
LoginAccept
LoginDenied
CreateAccountRequest
CreateAccountAccept
CreateAccountDenied
CreateAccountAuthCodeSubmit
AccountAuthenticated
AccountNotAuthenticated
AnnounceIpPort
AnnounceOffline
PrivateMessageRequest
PrivateMessageAccept
PrivateMessageAcceptOffline
PrivateMessageDenied
PrivateMessageForward
PrivateMessage
DiscoveryRequest
DiscoveryFail
DiscoveryAccept
SIZE
}
class "User" as C_0013909460443608576024
class C_0013909460443608576024 {
+User(const QString & u, const QString & pass = "", const QString & e = "", bool per = 0) : void
..
+get_email() const : QString
+get_password() const : QString
+get_permissions() const : bool
+get_username() const : QString
__
-email_ : QString
-pass_ : QString
-per_ : bool
-u_ : QString
}
class "Client" as C_0009036792685107474111
class C_0009036792685107474111 {
+Client(Client &) = deleted : void
-Client(QObject * parent = __null) : void
-~Client() : void
..
+operator=(const Client &) = deleted : Client &
..
+accountAuthenticated() : void
+accountAuthenticationFail() : void
+accountCreated() : void
+accountNotCreated() : void
-closeListener() : void
+connectToServer(const QHostAddress & host, int port) : void
+connectedToServer() : void
+createAccount(const User &) : void
{static} +destroyInstance() : void
+disconnect() : void
+disconnectedFromServer() : void
+discover(const User & u) : void
+discoverUserFail(const QString & username) : void
+discoverUserSucceed(const QString & username, const QList<QJsonObject> & messageJsonList) : void
-getDeviceIpAddress() : QHostAddress
{static} +getInstance() : Client *
+getState() const : ClientState
+getUser() const : User
-handleCreatingAccountState(const QJsonObject & m) : void
-handleLoggedInState(const QJsonObject & m) : void
-handleLoggingInState(const QJsonObject & m) : void
+login(const User &) : void
+loginSuccess() : void
+metaObject() const : const QMetaObject *
-onDM() : void
-onReply() : void
-openListener() : void
+privateMessage(const User & u, const QString & message) : void
+qt_metacall(QMetaObject::Call, int, void **) : int
+qt_metacast(const char *) : void *
{static} -qt_static_metacall(QObject *, QMetaObject::Call, int, void **) : void
+recievedDM(const QString & from, const QString & msg) : void
-sendDataToOtherClient(const QHostAddress & ip, const quint16 & port, const QByteArray & data) const : void
+submitAuthCode(const QString &) : void
{static} +tr(const char * s, const char * c = nullptr, int n = -1) : QString
{static} +trUtf8(const char * s, const char * c = nullptr, int n = -1) : QString
+writeToServer(ProtocolManager::MessageType, const QStringList &) : void
__
-current_user : User
{static} -instance : Client *
-listener : QTcpServer *
-sender : QTcpSocket *
-socket : QTcpSocket *
-state : ClientState
{static} +staticMetaObject : const QMetaObject
-usermap : std::unordered_map<QString,std::pair<QHostAddress,quint16>>
}
enum "Client::ClientState" as C_0004773889359258674523
enum C_0004773889359258674523 {
Disconnected
Disconnecting
Connecting
Connected
LoggingIn
LoggedIn
CreatingAccount
}
class "OOMWidget" as C_0014848441550523525489
class C_0014848441550523525489 {
+OOMWidget(QWidget * parent = nullptr) : void
..
{static} +getClient() : Client *
+metaObject() const : const QMetaObject *
+qt_metacall(QMetaObject::Call, int, void **) : int
+qt_metacast(const char *) : void *
{static} -qt_static_metacall(QObject *, QMetaObject::Call, int, void **) : void
{static} +setClient(Client * c) : void
+startApp() : void
{static} +tr(const char * s, const char * c = nullptr, int n = -1) : QString
{static} +trUtf8(const char * s, const char * c = nullptr, int n = -1) : QString
__
{static} #client : Client *
{static} +staticMetaObject : const QMetaObject
}
class "Login" as C_0003822774298956646229
class C_0003822774298956646229 {
+Login(QWidget * parent = nullptr) : void
+~Login() : void
..
-goToRegister() : void
-handleLogin() : void
+loginSuccess() : void
+metaObject() const : const QMetaObject *
+qt_metacall(QMetaObject::Call, int, void **) : int
+qt_metacast(const char *) : void *
{static} -qt_static_metacall(QObject *, QMetaObject::Call, int, void **) : void
+registerRequested() : void
{static} +tr(const char * s, const char * c = nullptr, int n = -1) : QString
{static} +trUtf8(const char * s, const char * c = nullptr, int n = -1) : QString
__
-loginUi : Ui::Login *
{static} +staticMetaObject : const QMetaObject
}
class "RegMachine" as C_0001310024392510780053
class C_0001310024392510780053 {
__
}
class "Register" as C_0007926232458949256986
class C_0007926232458949256986 {
+Register(QWidget * parent = nullptr) : void
+~Register() : void
..
+backToLogin() : void
-handleBack() : void
-handleRegister() : void
-isValidEmail(const QString &) : bool
-isValidPassword(const QString &) : bool
+metaObject() const : const QMetaObject *
+qt_metacall(QMetaObject::Call, int, void **) : int
+qt_metacast(const char *) : void *
{static} -qt_static_metacall(QObject *, QMetaObject::Call, int, void **) : void
-resetForm(bool fullForm) : void
-setBackEnabled() : void
-showPassword() : void
{static} +tr(const char * s, const char * c = nullptr, int n = -1) : QString
{static} +trUtf8(const char * s, const char * c = nullptr, int n = -1) : QString
__
-registerUi : Ui::Register *
{static} +staticMetaObject : const QMetaObject
}
class "Message" as C_0014824791405600746196
class C_0014824791405600746196 {
+Message(const QString & sender, const QString & receiver, const QString & msg) : void
..
+get_msg() const : QString
+get_receiver() const : QString
+get_sender() const : QString
__
-msg : QString
-receiver : User
-sender : User
}
class "OOMTextBrowser" as C_0012896982152753567421
class C_0012896982152753567421 {
+OOMTextBrowser(QWidget * parent = nullptr) : void
..
+addMessageToHistory(const Message msg) : void
+appendMessage(const Message & msg, bool history) : void
+clearHistory() : void
+getMessages() const : const QVector<Message> &
+metaObject() const : const QMetaObject *
+qt_metacall(QMetaObject::Call, int, void **) : int
+qt_metacast(const char *) : void *
{static} -qt_static_metacall(QObject *, QMetaObject::Call, int, void **) : void
{static} +tr(const char * s, const char * c = nullptr, int n = -1) : QString
{static} +trUtf8(const char * s, const char * c = nullptr, int n = -1) : QString
__
-messageList : QVector<Message>
{static} +staticMetaObject : const QMetaObject
}
class "EnterKeyFilter" as C_0012803028418620508859
class C_0012803028418620508859 {
+EnterKeyFilter(QObject * parent = nullptr) : void
..
+enterPressed() : void
#eventFilter(QObject * obj, QEvent * event) : bool
+metaObject() const : const QMetaObject *
+qt_metacall(QMetaObject::Call, int, void **) : int
+qt_metacast(const char *) : void *
{static} -qt_static_metacall(QObject *, QMetaObject::Call, int, void **) : void
{static} +tr(const char * s, const char * c = nullptr, int n = -1) : QString
{static} +trUtf8(const char * s, const char * c = nullptr, int n = -1) : QString
__
{static} +staticMetaObject : const QMetaObject
}
class "PrivateMessages" as C_0011157448002936184542
class C_0011157448002936184542 {
+PrivateMessages(QWidget * parent = nullptr) : void
+~PrivateMessages() : void
..
-formatClientMessage() : QString
-formatOtherMessage() : QString
-loadPage() : void
+metaObject() const : const QMetaObject *
-onEnterKeyPressed() : void
+qt_metacall(QMetaObject::Call, int, void **) : int
+qt_metacast(const char *) : void *
{static} -qt_static_metacall(QObject *, QMetaObject::Call, int, void **) : void
-receivedMessage(QString from, QString msg) : void
-searchUser() : void
{static} +tr(const char * s, const char * c = nullptr, int n = -1) : QString
{static} +trUtf8(const char * s, const char * c = nullptr, int n = -1) : QString
__
-currentlyMessaging : User
-enterFilter : EnterKeyFilter *
{static} +staticMetaObject : const QMetaObject
-ui : Ui::PrivateMessages *
}
class "authenticationCode" as C_0003481361528423082635
class C_0003481361528423082635 {
+authenticationCode(QWidget * parent = nullptr) : void
+~authenticationCode() : void
..
-authenticateUser() : void
-authenticationFailed() : void
+metaObject() const : const QMetaObject *
+qt_metacall(QMetaObject::Call, int, void **) : int
+qt_metacast(const char *) : void *
{static} -qt_static_metacall(QObject *, QMetaObject::Call, int, void **) : void
{static} +tr(const char * s, const char * c = nullptr, int n = -1) : QString
{static} +trUtf8(const char * s, const char * c = nullptr, int n = -1) : QString
__
-AuthUi : Ui::authenticationCode *
{static} +staticMetaObject : const QMetaObject
}
class "ApplicationHandler" as C_0000542423727397848991
class C_0000542423727397848991 {
+ApplicationHandler(QWidget * parent = nullptr) : void
..
+metaObject() const : const QMetaObject *
+qt_metacall(QMetaObject::Call, int, void **) : int
+qt_metacast(const char *) : void *
{static} -qt_static_metacall(QObject *, QMetaObject::Call, int, void **) : void
+switchToWidget(int index) : void
{static} +tr(const char * s, const char * c = nullptr, int n = -1) : QString
{static} +trUtf8(const char * s, const char * c = nullptr, int n = -1) : QString
__
-AuthenticationWidget : authenticationCode *
-LoginWidget : Login *
-PrivateMessagesWidget : PrivateMessages *
-RegisterWidget : Register *
-stackedWidget : QStackedWidget *
{static} +staticMetaObject : const QMetaObject
}
C_0016429213831703395188 ..> C_0008849749518693832582
C_0008849749518693832582 --+ C_0016429213831703395188
C_0009036792685107474111 ..> C_0008849749518693832582
C_0009036792685107474111 o-- C_0004773889359258674523 : -state
C_0009036792685107474111 o-- C_0013909460443608576024 : -current_user
C_0009036792685107474111 --> C_0009036792685107474111 : -instance
C_0004773889359258674523 --+ C_0009036792685107474111
C_0014848441550523525489 --> C_0009036792685107474111 : #client
C_0014848441550523525489 <|-- C_0003822774298956646229
C_0014848441550523525489 <|-- C_0007926232458949256986
C_0014824791405600746196 o-- C_0013909460443608576024 : -sender
C_0014824791405600746196 o-- C_0013909460443608576024 : -receiver
C_0012896982152753567421 o-- C_0014824791405600746196 : -messageList
C_0011157448002936184542 --> C_0012803028418620508859 : -enterFilter
C_0011157448002936184542 o-- C_0013909460443608576024 : -currentlyMessaging
C_0014848441550523525489 <|-- C_0011157448002936184542
C_0014848441550523525489 <|-- C_0003481361528423082635
C_0000542423727397848991 --> C_0003822774298956646229 : -LoginWidget
C_0000542423727397848991 --> C_0007926232458949256986 : -RegisterWidget
C_0000542423727397848991 --> C_0011157448002936184542 : -PrivateMessagesWidget
C_0000542423727397848991 --> C_0003481361528423082635 : -AuthenticationWidget
C_0014848441550523525489 <|-- C_0000542423727397848991

'Generated with clang-uml, version 0.6.0
'LLVM version clang version 18.1.8 (Fedora 18.1.8-1.fc40)
@enduml
